--- a/Prototype.html
+++ b/Prototype.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            I am fkgjdg
+            1
+        </nav>
+    </header>
 </body>
 </html>
