--- a/Prototype.html
+++ b/Prototype.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        div{
+            border: 1px solid black;
+            width: 100px;
+            height: 300px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <nav>
-            I am fkgjdg
-            1
-        </nav>
-    </header>
+<div>
+
+</div>
 </body>
 </html>
