--- a/Prototype.html
+++ b/Prototype.html
@@ -7,16 +7,68 @@
     <title>Document</title>
 
     <style>
-        div{
+        #wrapper{
+            border: 2px solid black;
+            width: 100%;
+            height: 5000px;
+            padding: 2px;
+        }
+        
+        header{
+            border: 2px solid red;
+            padding: 2px;
+        }
+        
+        nav{
+            border: 2px solid orange;
+            padding: 2px;
+        }
+
+        #top-menu{
+            border: 1px solid green;
+            width: 70%;
+            margin: 0px auto;
+            list-style: none;
+        }
+        #top-menu li{
+            display: inline-block;
             border: 1px solid black;
             width: 100px;
-            height: 300px;
+            margin: 0px 70px;
         }
     </style>
 </head>
 <body>
-<div>
+    <div id="wrapper">
+        <header>
+            <nav>
+                <ul id="top-menu">
+                    <li><img src="images/7371885_burger king_new burger king logo_2021_icon.svg" width="50px" height="50px"></li>
+                    <li>메뉴소개</li>
+                    <li>매장소개</li>
+                    <li>이벤트</li>
+                    <li>브랜드스토리</li>
+                </ul>
+                <button>딜리버리 주문</button>
+            </nav>
+            <div>
 
-</div>
+            </div>
+        </header>
+        <div id="container">
+            <article>
+
+            </article>
+            <div id="content-group">
+                <content>
+                </content>
+            </div>
+        </div>
+        <footer>
+
+        </footer>
+    </div>
+
+
 </body>
 </html>
